--- a/css/gallery.css
+++ b/css/gallery.css
@@ -3,10 +3,11 @@ body {
     background-color: #333;
 }
 
-main {
+.gallery-container {
     align-content: center;
     justify-items: center;
     height: 100vh;
+    width: 100%;
 }
 
 .grid-container {
@@ -44,9 +45,9 @@ img {
     }
 }
 
-@media (max-width: 1446px) {
+/* @media (max-width: 1426px) {
 
     .grid-container {
-        margin-top: 150px;
+        margin-top: 30px;
     }
-}
+} */
