--- a/css/style.css
+++ b/css/style.css
@@ -9,16 +9,19 @@
 }
 
 body {
-    min-height: 100vh;
+    height: 100vh;
     width: 100%;
 }
 
-main {
+.landing-page {
     width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    background-color: black;
 }
 
 nav {
-    /* position: fixed; */
     height: 80px;
     width: 100%;
     background-color: blueviolet;
@@ -47,7 +50,6 @@ nav ul li {
     font-weight: bold;
     padding: 7px 13px;
     border-radius: 5px;
-    /* text-transform: uppercase; */
 }
 
 a.active, .nav-links:hover {
@@ -68,6 +70,22 @@ a.active, .nav-links:hover {
     display: none;
 }
 
+
+.landing-section {
+    width: 700px;
+    color: white;
+}
+
+.two{
+    text-align: right;
+}
+
+ .right {
+    right: 50px;
+    height: 510px;
+    position: fixed;
+}
+
 @media (max-width: 960px) {
     .nav-links {
         font-size: 14px;
@@ -84,19 +102,29 @@ a.active, .nav-links:hover {
 
     .check {
         display: block;
-        /* background-color: blue; */
     }
 
     ul {
         position: fixed;
         width: 100%;
         height: 100vh;
-        /* display: block; */
         top: 80px;
         left: -100%;
         transition: all .5s;
         text-align: center;
         background-color: #333;
+    }
+
+    @media (max-width: 384px) {
+        .logo {
+            font-size: 25px;
+        }
+    }
+
+    @media (max-width: 354px) {
+        .logo {
+            font-size: 22px;
+        }
     }
 
     nav ul li {
